Added PolygonFantasyKingdom to project

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,6 @@ Plugins/FMODStudio/Resources/
 
 # FMOD Niagara Plugin
 Plugins/FMODStudioNiagara/Intermediate/
+
+## Assets
+Content/PolygonFantasyKingdom
